small alignment fixes

--- a/src/index.css
+++ b/src/index.css
@@ -32,6 +32,7 @@ body {
   justify-content: center;
   align-items: center;
   height: 100%;
+  margin: 0 0 0 1rem;
 }
 
 .container {
@@ -80,7 +81,7 @@ abbr {
   justify-content: flex-start;
   align-items: center;
   gap: 1rem;
-  margin-top: 2.5rem;
+  margin-top: 26px;
 }
 img[src="assets/images/image-avatar.webp"] {
   width: 30px;
@@ -94,6 +95,7 @@ h1 + p {
 
 div span {
   font-weight: 800;
+  font-size: 0.75rem;
 }
 
 @media (min-width: 768px) {
